force-app/main/default/objects/Account/fields/HRCSVC_Credit_Type__c.field-meta.xml
<CustomField>
    <fullName>HRCSVC_Credit_Type__c</fullName>
    <description>Created this for #SE-310</description>
    <label>Credit Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>