force-app/main/default/objects/Account/fields/HRCSVC_Customer_Type__c.field-meta.xml
<CustomField>
    <fullName>HRCSVC_Customer_Type__c</fullName>
    <description>Developed this for #SE-310</description>
    <label>Customer Type</label>
    <length>20</length>
    <type>Text</type>
</CustomField>